--- a/serverless.yml
+++ b/serverless.yml
@@ -72,6 +72,14 @@ functions:
   hello:
     handler: handler.hello
 
+  hello-via-apig:
+    handler: handler.hello
+    events:
+      - http:
+           path: hello
+           method: get
+           cors: true
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
